--- a/editt.ui
+++ b/editt.ui
@@ -6,48 +6,48 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>593</width>
-    <height>510</height>
+    <width>205</width>
+    <height>124</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QTableWidget" name="tableWidget">
+   <widget class="QLineEdit" name="lineEdit">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>50</y>
-      <width>571</width>
-      <height>421</height>
+      <y>40</y>
+      <width>161</width>
+      <height>22</height>
      </rect>
     </property>
    </widget>
-   <widget class="QPushButton" name="edit_btn">
+   <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>140</x>
-      <y>20</y>
-      <width>201</width>
+      <x>10</x>
+      <y>10</y>
+      <width>171</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:10pt; font-weight:600;&quot;&gt;Введите значение&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>70</y>
+      <width>161</width>
       <height>28</height>
      </rect>
     </property>
     <property name="text">
-     <string>Изменить выделенную ячейку</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="add_btn">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>20</y>
-      <width>121</width>
-      <height>28</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Добавить запись</string>
+     <string>Применить</string>
     </property>
    </widget>
   </widget>
